Centrarium Theme 설치

--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Berry Coding</title>
-</head>
-<body>
-    <h1>Berry_Coding</h1>
-</body>
-</html>
+---
+layout: home
+author_profile: true
+---
